# agentic-society

./: .gitignore  README-ZH.md  README.md  grade.py  pyproject.toml  testData.csv
asociety/: config.py  utils.py
asociety/analysis/: analysis.py
asociety/evaluation/: age_simularity.py  real_population.py
asociety/experiments/: experiment_executor.py  experiment_generator.py  experiment_persistor.py  question_anserer.py  quiz_generator.py
asociety/generator/: fixed_skeleton_generator.py  llm_engine.py  llm_engine_stop_test.py  llm_engine_test.py  persona_generator.py  persona_skeleton_generator.py
asociety/interaction/: __init__.py  chatroom.py  chatroom1.py  chatroom_manager.py
asociety/personality/: persona_eliciting.py  personality_analysis.py  personality_extractor.py  personality_quiz.py  personality_test.py
asociety/repository/: dao.py  database.py  experiment_rep.py  persina_rep.py  personality_rep.py  socializing_rep.py
asociety/socializing/: sim-comp.py  similarity.py
data/cross_section/: age.csv  age_mean.csv  age_mean_BHPS.csv  age_mean_GSOEP.csv  (+3 more)
doc/: meditation.md
prompts/: experiment.json  generation.json
studio/: agent-society-studio.py  analysis_panel.py  chatroom.py  create_experiment.py  data_browse.py  data_manager.py  evaluation.py  experiment_executor.py  paged_table.py  persona_sampling.py  personality_analysis.py  personality_browse.py  question_browse.py  select_persona.py  select_question.py  test.py
tools/: experiment.py  generate_persona.py  load_ipip_set.py  load_mc_set.py  load_question_set.py  personality_test.py
(+12 files in other folders)
