[tool.poetry]
name = "agentic-society"
version = "0.1.0"
description = "This repo is to support our work in applying language model agents in the research of social and economic discipline."
authors = ["baiyuqi"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
duckduckgo_search = "^5.3.0"
pyjwt = "^2.8.0"
httpx_sse = "^0.4.0"
langchain_experimental = "^0.0.58"
ipython = "^8.24.0"
matplot = "^0.1.9"
pandas = "^2.2.2"
crewai = "^0.30.11"
langgraph = "^0.0.50"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.30"
pandastable = "^0.13.1"
plotext = "^5.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
